[EventSource] Dispatch error event when window.stop() is called

Bug: 651759
Change-Id: Ied964193b1544a7019bc6988e8d794df09d771ab