third_party/WebKit/Source/modules/eventsource/EventSource.cpp
@@ -212,12 +212,13 @@ void EventSource::close() {
     connect_timer_.Stop();
   }
 
+  state_ = kClosed;
+
   if (loader_) {
     loader_->Cancel();
     loader_ = nullptr;
   }
 
-  state_ = kClosed;
 }
 
 const AtomicString& EventSource::InterfaceName() const {
@@ -309,8 +310,12 @@ void EventSource::DidFail(const ResourceError& error) {
     return;
   }
 
-  if (error.IsCancellation())
-    state_ = kClosed;
+  if (error.IsCancellation() && state_ != kClosed) {
+    // When the loading is cancelled from an external reason (e.g.,
+    // window.stop()), dispatch an error event and do not reconnect.
+    AbortConnectionAttempt();
+    return;
+  }
   NetworkRequestEnded();
 }
 
